--- a/www/css/register.css
+++ b/www/css/register.css
@@ -73,7 +73,7 @@ h1 {
     text-align:center;
 	text-transform:none;
 }
-
+/*
 form#registerForm>div {
 	margin:0px auto 10px auto;
 	width:100%;
@@ -100,5 +100,5 @@ form#registerForm input {
 	font-style:bold;
 	padding-left:auto;
 	padding-right:auto;
-}
+}*/
 
