--- a/www/css/signin.css
+++ b/www/css/signin.css
@@ -74,7 +74,7 @@ h1 {
 	text-transform:none;
 }
 
-form#loginForm>div {
+/*form#loginForm>div {
 	margin:0px auto 10px auto;
 	width:100%;
 }
@@ -88,7 +88,6 @@ form#loginForm button {
 	font-size:15px;
 	font-style:bold;
 	border-radius:5px;
-	width:50%;
 	color:white;
 	padding-left:auto;
 	padding-right:auto;
@@ -100,5 +99,5 @@ form#loginForm input {
 	font-style:bold;
 	padding-left:auto;
 	padding-right:auto;
-}
+}*/
 
