--- a/www/css/register.css
+++ b/www/css/register.css
@@ -25,11 +25,11 @@ body {
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
    /* background-color:#E4E4E4;*/
-    background-image:linear-gradient(360deg, orange, violet, yellow);
+   /* background-image:linear-gradient(360deg, orange, violet, yellow);
     background-image:-webkit-linear-gradient(360deg, red, orange, yellow, green, blue, violet);	
     background-image:-ms-linear-gradient(360deg, orange, violet, yellow);
     background-image:-webkit-gradient(360deg, color-stop(orange), color-stop(violet), color-stop(yellow));
-    background-attachment:fixed;
+    background-attachment:fixed;*/
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
@@ -51,6 +51,7 @@ body {
     /*padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
     margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
                                    /* offset horizontal: half of text area width */
+								   width:auto;
 }
 
 /* Landscape layout (with min-width) */
